Fix alignment of search results.

--- a/app/assets/stylesheets/search_results.css
+++ b/app/assets/stylesheets/search_results.css
@@ -1,6 +1,6 @@
 .search-results-pop-container {
   position: fixed;
-  left: 703px;
+  left: 750px;
   top: 60px;
   background-color: white;
   width: 420px;
